@@ -1,11 +1,11 @@
 package net.fortytwo.smsn.brain.model;
 
+import net.fortytwo.smsn.brain.AtomId;
 import net.fortytwo.smsn.brain.BrainTestBase;
-import net.fortytwo.smsn.brain.model.entities.EntityList;
-import net.fortytwo.smsn.brain.model.entities.KeyValueTree;
+import net.fortytwo.smsn.brain.model.entities.ListNode;
+import net.fortytwo.smsn.brain.model.entities.TreeNode;
 import net.fortytwo.smsn.brain.model.entities.Link;
 import net.fortytwo.smsn.brain.model.entities.Page;
-import net.fortytwo.smsn.brain.model.entities.Topic;
 import net.fortytwo.smsn.brain.model.pg.PGPage;
 import net.fortytwo.smsn.brain.model.pg.PGTopic;
 import org.junit.Before;
@@ -15,16 +15,16 @@ import java.io.IOException;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
 public class TopicsAndPagesTest extends BrainTestBase {
 
-    private Topic arthurTopic, fordTopic, zaphodTopic, friendTopic, earthTopic, teaTopic;
-    private Link friendsLink, arthurLink, fordLink, zaphodLink, earthLink, teaLink;
+    private Link friendsLink, arthurLink, fordLink, zaphodLink, teaLink;
 
     @Override
-    protected TopicGraph createAtomGraph() throws IOException {
-        return createNeo4jAtomGraph();
+    protected TopicGraph createTopicGraph() throws IOException {
+        return createNeo4jTopicGraph();
     }
 
     @Before
@@ -32,58 +32,51 @@ public class TopicsAndPagesTest extends BrainTestBase {
     public void setUp() throws Exception {
         super.setUp();
 
-        arthurTopic = topicGraph.createTopic("arthur");
-        fordTopic = topicGraph.createTopic("ford");
-        zaphodTopic = topicGraph.createTopic("zaphod");
-        friendTopic = topicGraph.createTopic("friend");
-        earthTopic = topicGraph.createTopic("earth");
-        teaTopic = topicGraph.createTopic("tea");
-
-        friendsLink = topicGraph.createLink(friendTopic, "friends");
-        arthurLink = topicGraph.createLink(arthurTopic, "Arthur P. Dent");
-        fordLink = topicGraph.createLink(fordTopic, "Ford Prefect");
-        zaphodLink = topicGraph.createLink(zaphodTopic, "Zaphod Beeblebrox");
-        earthLink = topicGraph.createLink(earthTopic, "The Earth");
-        teaLink = topicGraph.createLink(teaTopic, "Tea");
+        friendsLink = topicGraph.createLink(friendTopic, "friends", Role.Relation);
+        arthurLink = topicGraph.createLink(arthurTopic, "Arthur P. Dent", null);
+        fordLink = topicGraph.createLink(fordTopic, "Ford Prefect", null);
+        zaphodLink = topicGraph.createLink(zaphodTopic, "Zaphod Beeblebrox", Role.Relation);
+        teaLink = topicGraph.createLink(teaTopic, "Tea", null);
     }
 
     @Test
     public void ordinaryPageAndTopicTreeAreAllowed() {
         Page page = topicGraph.createPage(arthurLink);
         page.setText("a page about Arthur");
-
+        TreeNode<Link> tree = page.getContent();
+        tree.setValue(arthurLink);
+        tree.setChildren(topicGraph.toList(
+                topicGraph.createTopicTree(teaLink)));
         assertEquals("a page about Arthur", page.getText());
-        assertEquals("Arthur P. Dent", page.getContent().getKey().getLabel());
+        assertEquals("Arthur P. Dent", page.getContent().getValue().getLabel());
 
-        KeyValueTree<Link, EntityList<Link>> tree = page.getContent();
-        EntityList<Link> parentLinks = topicGraph.createListOfLinks(earthLink, teaLink);
-        tree.setValue(parentLinks);
-
-        Link secondLink = EntityList.toJavaList(page.getContent().getValue()).get(1);
+        Link secondLink = page.getContent().getChildren().get(0).getValue();
         assertEquals("Tea", secondLink.getLabel());
-        assertEquals("tea", secondLink.getTarget().getId());
+        assertEquals(new AtomId("tea"), secondLink.getTarget().getId());
 
-        KeyValueTree<Link, EntityList<Link>> friendsTree = topicGraph.createTopicTree(friendsLink);
-        EntityList<Link> childLinks = topicGraph.createListOfLinks(fordLink, zaphodLink);
-        friendsTree.setValue(childLinks);
-        EntityList<KeyValueTree<Link, EntityList<Link>>> children = topicGraph.createListOfTrees(friendsTree);
+        TreeNode<Link> friendsTree = topicGraph.createTopicTree(friendsLink);
+        ListNode<TreeNode<Link>> childLinks = topicGraph.toList(
+                topicGraph.createTopicTree(fordLink),
+                topicGraph.createTopicTree(zaphodLink));
+        friendsTree.setChildren(childLinks);
+        ListNode<TreeNode<Link>> children = topicGraph.toList(friendsTree);
         tree.setChildren(children);
 
-        assertEquals("friends", page.getContent().getChildren().getFirst().getKey().getLabel());
-        assertEquals("Ford Prefect", page.getContent().getChildren().getFirst().getValue().getFirst().getLabel());
+        assertEquals("friends", page.getContent().getChildren().get(0).getValue().getLabel());
+        assertEquals("Ford Prefect",
+                page.getContent().getChildren().get(0).getChildren().get(0).getValue().getLabel());
 
         page.destroy();
-
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void linkWithoutTargetIsNotAllowed() {
-        topicGraph.createLink(null, "nowhere");
+        topicGraph.createLink(null, "nowhere", null);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void linkWithoutLabelIsNotAllowed() {
-        topicGraph.createLink(arthurTopic, null);
+        topicGraph.createLink(arthurTopic, null, null);
     }
 
     @Test(expected = IllegalArgumentException.class)
@@ -93,36 +86,25 @@ public class TopicsAndPagesTest extends BrainTestBase {
         page.setContent(null);
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void treeWithoutKeyIsNotAllowed() {
+    @Test(expected = NullPointerException.class)
+    public void treeWithoutValueIsNotAllowed() {
         topicGraph.createTopicTree(null);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void emptyListOfLinksIsNotAllowed() {
-        topicGraph.createListOfLinks();
+        topicGraph.toList(new Link[]{});
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void emptyListOfSubtreesIsNotAllowed() {
-        topicGraph.createListOfTrees();
-    }
-
-    @Test
-    public void treeWithoutChildrenOrLinksIsAllowed() {
-        Page page = topicGraph.createPage(arthurLink);
-        KeyValueTree<Link, EntityList<Link>> tree = page.getContent();
-
-        tree.setChildren(null);
-        tree.setValue(null);
-
-        page.destroy();
+        topicGraph.toList(new TreeNode[]{});
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void settingTreeTopicToNullIsNotAllowed() {
-        KeyValueTree<Link, EntityList<Link>> tree = topicGraph.createTopicTree(arthurLink);
-        tree.setKey(null);
+        TreeNode<Link> tree = topicGraph.createTopicTree(arthurLink);
+        tree.setValue(null);
     }
 
     @Test
@@ -134,30 +116,33 @@ public class TopicsAndPagesTest extends BrainTestBase {
         Object pageId = ((PGPage) page).asVertex().id();
         assertTrue(graph.traversal().V(pageId).hasNext());
 
-        page.getContent().setValue(
-                topicGraph.createListOfLinks(
-                        topicGraph.createLink(arthurTopic, "Arthur as a top-level link")));
-
         page.getContent().setChildren(
-                topicGraph.createListOfTrees(
+                topicGraph.toList(
                         topicGraph.createTopicTree(
-                                topicGraph.createLink(arthurTopic, "Arthur as a header"))));
-        page.getContent().getChildren().getFirst().setValue(
-                topicGraph.createListOfLinks(
-                        topicGraph.createLink(arthurTopic, "Arthur as a second-level link")));
+                                topicGraph.createLink(arthurTopic, "Arthur as a top-level link", null)),
+                        topicGraph.createTopicTree(
+                                topicGraph.createLink(arthurTopic, "Arthur as a header", Role.Relation))));
+        page.getContent().getChildren().get(1).setChildren(
+                topicGraph.toList(
+                        topicGraph.createTopicTree(
+                                topicGraph.createLink(arthurTopic, "Arthur as a second-level link", null))));
 
-        assertEquals(arthurTopic, page.getContent().getKey().getTarget());
-        assertEquals("Arthur P. Dent", page.getContent().getKey().getLabel());
-        assertEquals(arthurTopic, page.getContent().getValue().getFirst().getTarget());
-        assertEquals("Arthur as a top-level link", page.getContent().getValue().getFirst().getLabel());
-        assertEquals(arthurTopic, page.getContent().getChildren().getFirst().getKey().getTarget());
-        assertEquals("Arthur as a header", page.getContent().getChildren().getFirst().getKey().getLabel());
-        assertEquals(arthurTopic, page.getContent().getChildren().getFirst().getValue().getFirst().getTarget());
+        assertEquals(arthurTopic, page.getContent().getValue().getTarget());
+        assertEquals("Arthur P. Dent", page.getContent().getValue().getLabel());
+        assertNull(page.getContent().getValue().getRole());
+        assertEquals(arthurTopic, page.getContent().getChildren().get(0).getValue().getTarget());
+        assertEquals("Arthur as a top-level link", page.getContent().getChildren().get(0).getValue().getLabel());
+        assertNull(page.getContent().getChildren().get(0).getValue().getRole());
+        assertEquals(arthurTopic, page.getContent().getChildren().get(1).getValue().getTarget());
+        assertEquals("Arthur as a header", page.getContent().getChildren().get(1).getValue().getLabel());
+        assertEquals(Role.Relation, page.getContent().getChildren().get(1).getValue().getRole());
+        assertEquals(arthurTopic, page.getContent().getChildren().get(1).getChildren().get(0).getValue().getTarget());
         assertEquals("Arthur as a second-level link",
-                page.getContent().getChildren().getFirst().getValue().getFirst().getLabel());
+                page.getContent().getChildren().get(1).getChildren().get(0).getValue().getLabel());
+        assertNull(page.getContent().getChildren().get(1).getChildren().get(0).getValue().getRole());
 
         // before destroying the page, create another page about Arthur
-        Page page2 = topicGraph.createPage(topicGraph.createLink(arthurTopic, "Arthur Philip Dent"));
+        Page page2 = topicGraph.createPage(topicGraph.createLink(arthurTopic, "Arthur Philip Dent", null));
         Object page2Id = ((PGPage) page2).asVertex().id();
 
         assertTrue(graph.traversal().V(arthurId).hasNext());
